src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active/inactive flag for contact</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Lowes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Ace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Plastikote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Wattyl Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3D Laser Sintering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerosol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil/Extrusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Masters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Children_Names__c</fullName>
        <label>Children Names</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Global_Region__c</fullName>
        <description>This field is pulled from Accounts and is not visible to users. This field is used in Views used to Mail Merge.</description>
        <formula>TEXT( Account.Global_Region__c)</formula>
        <label>Contact Global Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Price_List__c</fullName>
        <description>This field is pulled from Accounts and is not visible to users. This field is used in Views used to Mail Merge.</description>
        <formula>IF ( INCLUDES ( Account.Price_List__c , &quot;Acrylic&quot; ), &quot;Acrylic; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Price_List__c , &quot;Colorant&quot; ), &quot;Colorant; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Price_List__c , &quot;No&quot; ), &quot;No; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Price_List__c , &quot;Solution Acrylics&quot; ), &quot;Solution Acrylics; &quot;,null ) &amp;
IF ( INCLUDES ( Account.Price_List__c , &quot;Solvent&quot; ), &quot;Solvent; &quot;,null )&amp;
IF ( INCLUDES ( Account.Price_List__c , &quot;Water based&quot; ), &quot;Water based; &quot;,null )</formula>
        <label>Contact Price List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Pricing_Category__c</fullName>
        <description>This field is pulled from Accounts and is not visible to users. This field is used in Views used to Mail Merge.</description>
        <formula>TEXT( Account.Pricing_Category__c)</formula>
        <label>Contact Pricing Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADM of Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decor Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Unit Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divisional Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint Dept Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PaintDrop Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painter / Applicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_address_avaliable__c</fullName>
        <inlineHelpText>Did you ask for an email address?</inlineHelpText>
        <label>Email address avaliable?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_ID_Number__c</fullName>
        <description>To be used for conversion or integration processes (such as Lotus Notes ID and Dealer Account ID)</description>
        <externalId>true</externalId>
        <label>Legacy Contact ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address_Definition__c</fullName>
        <formula>&quot;Populate Other Address fields with the Physical Address if applicable&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address Definition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Household_Members__c</fullName>
        <label>Other Household Members</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Contact__c</fullName>
        <label>Private Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_email__c</fullName>
        <label>Second email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_Pricing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPS- For Pricing Notification</description>
        <label>Send Pricing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Address_City__c</fullName>
        <label>Site Address: City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_Country__c</fullName>
        <label>Site Address: Country</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_State__c</fullName>
        <label>Site Address: State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_Street__c</fullName>
        <label>Site Address: Street</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_Zip_Code__c</fullName>
        <label>Site Address: Zip Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>Source Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Department__c</fullName>
        <description>Contact department picklist for B&amp;Q Channel Partner</description>
        <label>Store Department</label>
        <picklist>
            <picklistValues>
                <fullName>Decor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>TIMBASURVEYS__Survey__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unknown_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If customer does not provide last name then check the box</description>
        <inlineHelpText>If customer does not provide last name then check the box and type at least one character (&quot;x&quot; for example) into the Last Name field</inlineHelpText>
        <label>Unknown Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Profile__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_of_Business__c</fullName>
        <description>EPS Global Accounts Project</description>
        <label>View of Business</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BQContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer B&amp;Q</value>
        </filters>
        <label>B&amp;Q Contacts</label>
        <sharedTo>
            <role>Cons_Contact_Center_BU_ADMIN_EU</role>
            <role>Cons_Contact_Center_EU</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Contacts_with_Departments</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Store_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Valspar_Master_Contact_Record_Type</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer B&amp;Q</value>
        </filters>
        <filters>
            <field>Store_Department__c</field>
            <operation>notEqual</operation>
            <value>Decor,Other,Trade</value>
        </filters>
        <label>B&amp;Q Contacts with Departments</label>
        <sharedTo>
            <roleAndSubordinates>Cons_B_Q_PK_Executives_Managers_EMEAI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>B_Q_Contacts_with_Departments1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Store_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Valspar_Master_Contact_Record_Type</value>
        </filters>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer B&amp;Q</value>
        </filters>
        <filters>
            <field>Store_Department__c</field>
            <operation>notEqual</operation>
            <value>Decor,Other,Trade</value>
        </filters>
        <label>B&amp;Q Contacts with Departments</label>
        <sharedTo>
            <roleAndSubordinates>Cons_B_Q_PK_Executives_Managers_EMEAI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>ConsConsContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Legacy_Contact_ID_Number__c</columns>
        <columns>Contact_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer Consumer</value>
        </filters>
        <label>Consumer Consumer Contacts</label>
        <sharedTo>
            <role>Cons_Contact_Center</role>
            <role>Cons_Contact_Center_BU_ADMIN_EU</role>
            <role>Cons_Contact_Center_EU</role>
            <role>Consumer_Contact_Center_BU_Admin</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LowesContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Legacy_Contact_ID_Number__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer Lowes</value>
        </filters>
        <label>Lowes Contacts</label>
        <sharedTo>
            <role>Cons_Contact_Center</role>
            <role>Consumer_Contact_Center_BU_Admin</role>
            <role>Sys_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PricingContactListView</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.ADDRESS2_ZIP</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Send_Pricing_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>PricingContactListView</label>
        <sharedTo>
            <group>EPSNAUsers</group>
            <group>EPS_Data_Sharing</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Valspar_Master_Contact_Record_Type</fullName>
        <active>true</active>
        <description>Master contact record type for Valspar.</description>
        <label>Valspar Master Contact Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Name_is_a_Required_Field</fullName>
        <active>true</active>
        <description>Account Name is a Required Field unless Business Unit = Consumer Consumer (AND LAST MODIFIED BY DOES NOT EQUAL API USER)</description>
        <errorConditionFormula>AND(
ISBLANK(Account.Name),
IF(
NOT(ISPICKVAL(Business_Unit__c, &quot;Consumer Consumer&quot;)),True,False),
LastModifiedBy.FirstName &lt;&gt; &quot;API&quot; 
)</errorConditionFormula>
        <errorMessage>Account Name is a Required Field unless Business Unit = Consumer Consumer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BQ_Store_Department_Field_Required</fullName>
        <active>true</active>
        <description>Makes the Store Department field a required field if the business unit selected is B&amp;Q</description>
        <errorConditionFormula>ISPICKVAL(Business_Unit__c, &apos;Consumer B&amp;Q&apos;) &amp;&amp; ISPICKVAL(Store_Department__c,&apos;&apos;)</errorConditionFormula>
        <errorMessage>Store Department must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Unit_is_a_required_field</fullName>
        <active>true</active>
        <description>Business Unit is a required field for NBP Consumer Contact Center</description>
        <errorConditionFormula>AND(  
OR(
User_Profile__c  = &quot;Consumer Contact Center Agent&quot;,
User_Profile__c  = &quot;Consumer Contact Center Manager&quot;),
ISPICKVAL(Business_Unit__c,&quot;&quot;)
)</errorConditionFormula>
        <errorMessage>Business Unit is a required field for NBP Consumer Contact Center</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Is_Email_Address_Available</fullName>
        <active>true</active>
        <description>Email Address Available field must be populated if Business Unit = Consumer Consumer for NBP Consumer Contact Center</description>
        <errorConditionFormula>AND(  
OR(
User_Profile__c  = &quot;Consumer Contact Center Agent&quot;,
User_Profile__c  = &quot;Consumer Contact Center Manager&quot;),
ISBLANK(Email),
OR(
ISPICKVAL(Email_address_avaliable__c,&quot;Yes&quot;) ,
ISPICKVAL(Email_address_avaliable__c,&quot;&quot;))
)</errorConditionFormula>
        <errorMessage>Email Address Available field must be changed to &quot;No&quot; if Business Unit = Consumer Consumer and Email Address = Blank for NBP Consumer Contact Center</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_number_validation_format</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(REGEX(Phone, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorMessage>US phone numbers should be in this format: (999) 999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Street_city_and_address_are_required</fullName>
        <active>false</active>
        <description>Contact mailing street, city and state fields are required.</description>
        <errorConditionFormula>OR(
   ISBLANK( MailingStreet ),
   ISBLANK( MailingState ),
   ISBLANK( MailingCity   )
)</errorConditionFormula>
        <errorMessage>The mailing street city and state are required.</errorMessage>
    </validationRules>
</CustomObject>